--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       window.onUsersnapCXLoad = function(api) {
         api.init();
       }
@@ -25,6 +25,6 @@
       script.defer = 1;
       script.src = 'https://widget.usersnap.com/global/load/03b2bc23-2106-49a5-b7c6-1d4fd4edc720?onload=onUsersnapCXLoad';
       document.getElementsByTagName('head')[0].appendChild(script);
-    </script>
+    </script> -->
   </body>
 </html>
